Opened 11 years ago

Closed 11 years ago

#1899 closed defect (fixed)

iac: metalic noise while seeking

Reported by: ami_stuff Owned by:
Priority: normal Component: undetermined
Version: git-master Keywords: iac
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

to reproduce please seek with the mouse in the file (with pressed and unreleased left mouse button)

attached patch seems to improve the situation a bit, but I don't know if it's correct

http://samples.ffmpeg.org/A-codecs/Indeo_audio/Angel%20Bday.avi

C:\>ffplay -vn Angel Bday.avi
ffplay version N-46469-gc995644 Copyright (c) 2003-2012 the FFmpeg developers
  built on Nov  5 2012 17:54:28 with gcc 4.7.2 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-pthreads --enable-runt
ime-cpudetect --enable-avisynth --enable-bzlib --enable-frei0r --enable-libass -
-enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libfreetype --enab
le-libgsm --enable-libmp3lame --enable-libnut --enable-libopenjpeg --enable-libo
pus --enable-librtmp --enable-libschroedinger --enable-libspeex --enable-libtheo
ra --enable-libutvideo --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-li
bvorbis --enable-libvpx --enable-libx264 --enable-libxavs --enable-libxvid --ena
ble-zlib
  libavutil      52.  5.100 / 52.  5.100
  libavcodec     54. 71.100 / 54. 71.100
  libavformat    54. 36.100 / 54. 36.100
  libavdevice    54.  3.100 / 54.  3.100
  libavfilter     3. 21.106 /  3. 21.106
  libswscale      2.  1.102 /  2.  1.102
  libswresample   0. 16.100 /  0. 16.100
  libpostproc    52.  1.100 / 52.  1.100
[avi @ 02af0060] non-interleaved AVI
Input #0, avi, from 'Angel Bday.avi':
  Duration: 00:00:14.47, start: 0.000000, bitrate: 1017 kb/s
    Stream #0:0: Video: indeo4 (IV41 / 0x31345649), yuv410p, 320x240, 15 tbr, 15
 tbn, 15 tbc
    Metadata:
      title           : C:\Galleries\Main Gallery\TMPVIDEO\IVCSATMP.AVI
    Stream #0:1: Audio: iac ([2][4][0][0] / 0x0402), 44100 Hz, stereo, fltp, 176
 kb/s
    Metadata:
      title           : C:\Galleries\Main Gallery\TMPVIDEO\IVCSATMP.AVI
[iac @ 02af6c00] Read coefficients failed=    0KB sq=    0B f=0/0
Seek to 69% ( 0:00:09) of total duration ( 0:00:14)       B f=0/0
Seek to 69% ( 0:00:09) of total duration ( 0:00:14)       B f=0/0
Seek to 69% ( 0:00:09) of total duration ( 0:00:14)       B f=0/0
Seek to 69% ( 0:00:09) of total duration ( 0:00:14)
Seek to 69% ( 0:00:09) of total duration ( 0:00:14)       B f=0/0
Seek to 68% ( 0:00:09) of total duration ( 0:00:14)
Seek to 68% ( 0:00:09) of total duration ( 0:00:14)       B f=0/0
Seek to 68% ( 0:00:09) of total duration ( 0:00:14)       B f=0/0
Seek to 68% ( 0:00:09) of total duration ( 0:00:14)
Seek to 68% ( 0:00:09) of total duration ( 0:00:14)       B f=0/0
Seek to 67% ( 0:00:09) of total duration ( 0:00:14)
Seek to 67% ( 0:00:09) of total duration ( 0:00:14)
Seek to 68% ( 0:00:09) of total duration ( 0:00:14)       B f=0/0
Seek to 68% ( 0:00:09) of total duration ( 0:00:14)
Seek to 68% ( 0:00:09) of total duration ( 0:00:14)       B f=0/0
Seek to 68% ( 0:00:09) of total duration ( 0:00:14)
Seek to 68% ( 0:00:09) of total duration ( 0:00:14)       B f=0/0
  10.04 A-V:  0.000 fd=   0 aq=    1KB vq=    0KB sq=    0B f=0/0
    Last message repeated 36 times

Attachments (1)

imc_flush.diff (1.2 KB ) - added by ami_stuff 11 years ago.

Download all attachments as: .zip

Change History (4)

by ami_stuff, 11 years ago

Attachment: imc_flush.diff added

comment:1 by Carl Eugen Hoyos, 11 years ago

Keywords: iac added
Status: newopen
Version: unspecifiedgit-master

comment:2 by Carl Eugen Hoyos, 11 years ago

Reproduced by developer: set

comment:3 by Michael Niedermayer, 11 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.